--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -96,7 +96,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Kazakh: {{t+|kk|зат}}
 * Khmer: {{t+|km|វត្ថុ}}
 {{trans-mid}}
-* Korean: {{t+|ko|물질}}
+* Korean: {{t+|ko|물질}} ({{t|ko|物質|sc=Hani}})
 * Kurdish:
 *: Kurmanji: {{t+|ku|made}}
 * Kyrgyz: {{t+|ky|зат}}
@@ -131,7 +131,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Urdu: {{t|ur|مادہ|tr=māda}}
 * Uyghur: {{t|ug|ماددا}}
 * Uzbek: {{t+|uz|modda}}
-* Vietnamese: {{t+|vi|vật chất}}
+* Vietnamese: {{t+|vi|vật chất}} ({{t|vi|物質|sc=Hani}})
 {{trans-bottom}}
 
 {{trans-top|essential part}}
@@ -152,7 +152,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 {{trans-mid}}
 * Hungarian: {{t+|hu|lényeg}}, {{t+|hu|szubsztancia}}
 * Japanese: {{t|ja|骨子|tr=kosshi}}
-* Korean: {{t+|ko|본질}}, {{t+|ko|실질}}
+* Korean: {{t+|ko|본질}} ({{t|ko|本質|sc=Hani}}), {{t+|ko|실질}} ({{t|ko|實質|sc=Hani}})
 * Latin: {{t|la|substantia|f}}
 * Maori: {{t+|mi|tino}}
 * Norwegian: {{t|no|substans|m}}
@@ -168,14 +168,14 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 
 {{trans-top|substantiality; solidity; firmness}}
 * Finnish: {{t+|fi|rakenne}}
-* Korean: {{t+|ko|실체}}, {{t+|ko|본질}}
+* Korean: {{t+|ko|실체}} ({{t|ko|實體|sc=Hani}}), {{t+|ko|본질}} ({{t|ko|本質|sc=Hani}})
 {{trans-mid}}
 * Spanish: {{t+|es|enjundia}}
 {{trans-bottom}}
 
 {{trans-top|material possessions}}
 * Chinese:
-*: Mandarin: {{t+|cmn|资产}}
+*: Mandarin: {{t+|cmn|資產}}, {{t+|cmn|资产|tr=zīchǎn|sc=Hani}}, {{t+|cmn|財產}}, {{t+|cmn|财产|tr=cáichǎn|sc=Hani}}
 * Danish: {{t|da|formue}}
 * Finnish: {{t+|fi|vara|alt=varat|p}}, {{t+|fi|varallisuus}}
 * French: {{t+|fr|biens|m-p}}
@@ -185,8 +185,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 *: Ancient: {{t|grc|οὐσία|f}}
 * Hungarian: {{t+|hu|vagyon}}
 {{trans-mid}}
-* Japanese: {{t+|ja|本質|tr=honshitsu}}, {{t|ja|実体|tr=jittai}}
-* Korean: {{t+|ko|자산}}, {{t+|ko|재산}}, {{t+|ko|부}}
+* Korean: {{t+|ko|자산}} ({{t|ko|資產|sc=Hani}}), {{t+|ko|재산}} ({{t|ko|財產|sc=Hani}})
 * Norwegian: {{t+|no|formue|m}}
 * Polish: {{t+|pl|majątek|m}}
 * Portuguese: {{t+|pt|riqueza|f}}
@@ -205,12 +204,12 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 
 {{trans-top|drugs}}
 * Chinese:
-*: Mandarin: {{t+|cmn|毒品}}
+*: Mandarin: {{t+|cmn|物質}}, {{t+|cmn|物质|tr=wùzhì}}, {{t|cmn|毒品|t=dúpǐn}}
 * Finnish: {{t+|fi|aine|alt=aineet|p}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t+|el|ουσίες|f-p}}
 * Hungarian: {{t+|hu|szer}}
-* Korean: {{t+|ko|마약}}
+* Korean: {{t+|ko|마약}} ({{t|ko|麻藥|sc=Hani}})
 {{trans-mid}}
 * Norwegian: {{t+|no|narkotika}}
 *: Bokmål: {{t+|nb|narkotika|n}}, {{t+|nb|stoff|n}}, {{t|nb|substans|m}}
@@ -234,7 +233,6 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Indonesian: {{t+check|id|bahan}}
 * Interlingua: {{t-check|ia|substantia}}
 * Italian: {{t+check|it|sostanza|f}}
-* Korean: {{t+check|ko|실체}}, {{t+check|ko|물질}}
 {{trans-mid}}
 * Lithuanian: {{t+check|lt|turinys}}
 * Middle English: {{t-check|enm|substaunce}}
@@ -243,8 +241,6 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Slovak: {{t+check|sk|hmota|f}}
 * Tibetan: {{t-check|bo|རྒྱུ}}
 * Turkish: {{t+check|tr|madde}}
-* Uyghur: {{t-check|ug|tr=madda}}
-* Vietnamese: {{t+check|vi|chất}}
 * Welsh: {{t+check|cy|sylwedd}}
 * Yiddish: {{t-check|yi|מאַטעריע|f}}
 {{trans-bottom}}
