--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -204,7 +204,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 
 {{trans-top|drugs}}
 * Chinese:
-*: Mandarin: {{t+|cmn|物質}}, {{t+|cmn|物质|tr=wùzhì}}, {{t|cmn|毒品|t=dúpǐn}}
+*: Mandarin: {{t+|cmn|物質}}, {{t+|cmn|物质|tr=wùzhì}}, {{t|cmn|毒品|tr=dúpǐn}}
 * Finnish: {{t+|fi|aine|alt=aineet|p}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t+|el|ουσίες|f-p}}
