--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -57,7 +57,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 |substantive}}
 
 ====Translations====
-{{trans-top|matter}}
+{{trans-top-also|physical matter; material|matter}}
 * Albanian: {{t+|sq|substancë|f}}, {{t+|sq|lëndë|f}}
 * Arabic: {{t+|ar|مَادَّة|f}}
 * Armenian: {{t+|hy|նյութ}}
@@ -116,7 +116,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 * Polish: {{t+|pl|substancja|f}}
 * Portuguese: {{t+|pt|substância|f}}
 * Romanian: {{t+|ro|substanță|f}}
-* Russian: {{t+|ru|вещество́|n}}, {{t+|ru|субста́нция|f}}, {{t+|ru|мате́рия|f}}
+* Russian: {{t+|ru|вещество́|n}}, {{t+|ru|субста́нция|f}} {{qualifier|literary}}, {{t+|ru|мате́рия|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|супста̀нца|f}}
 *: Roman: {{t|sh|supstànca|f}}
