Edited the Indonesian translation and added a small note. It's "bersatu" not "serikat". <United Kingdom#59188730>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -68,7 +68,7 @@
 * Hungarian: {{t+|hu|Egyesült Királyság}}, {{t+|hu|Nagy-Britannia és Észak-Írország Egyesült Királysága}}
 * Icelandic: {{t|is|Hið sameinaða konungsríki|n}}
 * Ido: {{t+|io|Unionita Rejio}}
-* Indonesian: {{t|id|Kerajaan Inggris Serikat}}, {{t|id|Kerajaan Serikat}}
+* Indonesian: {{t|id|Kerajaan Bersatu}} ''(note: it is more often to be referred as Britania Raya "Great Britain" than Kerajaan Bersatu)''
 * Interlingua: {{t|ia|Regno Unite}}
 * Irish: {{t|ga|Ríocht Aontaithe|alt=An Ríocht Aontaithe|f}}
 * Italian: {{t+|it|Regno Unito|m}}, {{t+|it|Regno Unito di Gran Bretagna e Irlanda del Nord|m}}
