--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -19,8 +19,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}
 {{en-noun|~}}
 
 # A [[cloth]] or stuff made of [[mat]]ted [[fibre]]s of [[wool]], or wool and [[fur]], [[full]]ed or wrought into a compact substance by rolling and pressure, with lees or size, without spinning or weaving.
-#* {{rfdate|en}}, {{w|Shakespeare}}, ''King Lear'', act 4, scene 6:
-#*: It were a delicate stratagem to shoe A troop of horse with '''felt'''.
+#* {{RQ:Shakespeare Lear|IV|6|passage=It were a delicate stratagem to shoe A troop of horse with '''felt'''.}}
 # A [[hat]] made of felt.
 # {{lb|en|obsolete}} A [[skin]] or [[hide]]; a [[fell]]; a [[pelt]].
 #* '''1707''', John Mortimer, ''The whole art of husbandry'':
