--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -24,7 +24,7 @@
 {{Han etym}}
 {{Han compound|叀|心|t2=heart|ls=ic}}.
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=huì
 |m-s=
@@ -44,7 +44,7 @@
 |cat=n
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # [[benefit]]; [[favor]]; [[advantage]]
@@ -55,16 +55,24 @@
 #: {{zh-x|惠顧|your patronage}}
 # {{surname|zh|dot=:}} [[Hui]]
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|benefit}}
 {{zh-syn-saurus|益處}}
 * {{sense|benevolent}}
 {{zh-syn-saurus|善良}}
 * {{sense|mild}} {{zh-l|平和}}, {{zh-l|平易}}, {{zh-l|柔和}}, {{zh-l|柔順}}, {{zh-l|溫和}}
 
-===Compounds===
+====Compounds====
 {{zh-der|不夷不惠|不惠|互惠|互惠原則|互惠關稅|仁惠|優惠|優惠待遇|優惠關稅|受惠|口惠|嘉惠|夷惠|好施小惠|好行小惠|察惠|實惠|小恩小惠|小惠|布德施惠|平等互惠|廣惠倉|德惠|恩惠|惠及|惠士奇|惠子|惠子知我|惠存|惠安縣|惠崇|惠州之役|惠帳|惠恤|惠政|惠施|惠施五車|惠棟|惠澤|惠然|惠然肯來|惠特曼|惠綏|惠而不費|惠聲|惠育|惠臨|惠賜|惠贈|惠連|惠鈔|惠鑒|惠陽縣|惠音|惠顧|惠風|惠黠|施惠|晉惠帝|李惠堂|柳下惠|梁惠王|楊惠之|淫惠|渥惠|澆瓜之惠|濟惠|特惠|特惠制度|特惠待遇|特惠關稅|甘棠之惠|福惠雙修|秀外惠中|私恩小惠|聖惠方|見惠|謝惠連|辯惠|銘謝惠顧|駿惠|惠州|通惠|惠東}}
 
+===Pronunciation 2===
+{{zh-pron
+|m=xì
+|cat=pn
+}}
+====Definitions====
+{{zh-hanzi}}
+# (Shaanxi Dialect){{surname|zh|dot=:}} Xi
 ----
 
 ==Japanese==
