--- a/en/偣/偣.11123.wikitext
+++ b/en/偣/偣.11123.wikitext
@@ -34,7 +34,9 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# {{rfdef|ja|sort=人09}}
+# [[impure]]
+# [[uncleanliness]]
+# [[disgrace]]
 
 ====Readings====
 * {{ja-readings|on=[[えん]] (en), [[あん]] (an)|kun=[[きよい]] (kiyoi)}}
