--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -130,7 +130,7 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 * {{ja-r|春%秋%戦%国|しゅん%じゅう%せん%ごく|{{w|Spring and Autumn Period}} and {{w|Warring States Period}} in China}}
 * {{ja-r|春%一番|はる%いちばん|first storm of spring}}
 * {{ja-r|春%風|はる%かぜ|spring breeze}}
-* {{ja-r|春%霞|はる%がすみ}} springtime haze}}
+* {{ja-r|春%霞|はる%がすみ|springtime haze}}
 * {{ja-r|春%着|はる%ぎ|springwear, New Year's clothes}}
 * {{ja-r|春%蚕|はる%ご|spring breed of silkworms}}
 * {{ja-r|春%先|はる%さき|beginning of spring}}
