--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -32,8 +32,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 # {{lb|en|by extension}} Highest point or [[state]]; [[peak]].
 #: {{syn|en|acme|apogee|culmination|pinnacle}}
 #* {{RQ:Shakespeare Tempest|I|ii|passage=I find my '''zenith''' doth depend upon / A most auspicious star.}}
-#* {{rfdatek|en|Macaulay}}
-#*: {{quote|en|It was during those civil troubles {{...}} this aspiring family reached the '''zenith'''.}}
+#* {{RQ:Macaulay History|13|It was during those civil troubles {{...}} this aspiring family reached the '''zenith'''.}}
 #* {{quote-book|en|page=173|year=1900|author=William Beckford| title=The History of the Caliph Vathek| url=http://books.google.com/books?id=KnArAAAAMAAJ| passage="There for a while I enjoyed myself in the '''zenith''' of glory and pleasure."}}
 
 ====Derived terms====
