--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -41,6 +41,9 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 # {{lb|en|transitive|informal}} To [[do]] or [[perform]].
 #: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
 #: ''You'll be sent home if you '''pull''' another stunt like that.''
+# {{lb|en|with 'a' and the name of a person, place, event, etc.}} To [[copy]] or [[emulate]] the actions or [[behaviour]] that is associated with the person or thing mentioned.
+#: {{ux|en|He '''pulled''' an Elvis and got really fat.}}
+#: {{ux|en|They're trying to '''pull''' a {{w|Watergate scandal|Watergate}} on us.}}
 # To toss a [[frisbee]] with the intention of launching the disc across the length of a field.
 # {{lb|en|intransitive}} To [[row]].
 #* '''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter VI
