--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -34,6 +34,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #: ''He's '''pulled''' that bird over there.''
 # {{lb|en|transitive}} To [[remove]] (something), especially from public [[circulation]] or [[availability]].
 #: ''Each day, they '''pulled''' the old bread and set out fresh loaves.''
+#: ''The book was due to be released today, but it was '''pulled''' at the last minute over legal concerns.'' 
 # {{lb|en|transitive}} To [[retrieve]] or [[generate]] for use.
 #: ''I'll have to '''pull''' a part number for that.''
 #* '''2006''', Michael Bellomo, Joel Elad, ''How to Sell Anything on Amazon...and Make a Fortune!''
