--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -327,6 +327,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #* {{rfdatek|en|R. A. Proctor}}
 #*: The '''pull''' is not a legitimate stroke, but bad cricket.
 # {{lb|en|golf}} A mishit shot which travels in a straight line and (for a right-handed player) left of the intended path.
+# {{lb|en|printing|historical}} A single [[impression]] from a [[handpress]].
 
 ====Synonyms====
 * {{sense|act of pulling}} {{l|en|tug}}, {{l|en|yank}}
