--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -108,9 +108,9 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Catalan: {{t+|ca|trobar}}
 * Chechen: {{t-needed|ce}}
 * Chinese:
-*: Cantonese: {{t|yue|搵到|sc=Hani}}, {{t|yue|揾到|tr=wan2 dou2|sc=Hani}}
-*: Mandarin: {{t+|cmn|找到|tr=zhǎodào|sc=Hani}}
-*: Min Nan: {{t|nan|[[揣]][[著]]}}, {{t|nan|[[揣]][[着]]|tr=chhōe--tio̍h, chhē--tio̍h|sc=Hani}}
+*: Cantonese: {{t|yue|[[搵]][[到]]}}, {{t|yue|[[揾]][[到]]|tr=wan2 dou3-2}}
+*: Mandarin: {{t+|cmn|[[找]][[到]]|tr=zhǎo dào}}
+*: Min Nan: {{t|nan|[[揣]][[著]]}}, {{t|nan|[[揣]][[着]]|tr=chhōe--tio̍h, chhē--tio̍h}}
 * Cimbrian: {{t|cim|bènnan}}
 * Crimean Tatar: {{t|crh|tapmaq}}
 * Czech: {{t+|cs|nalézat|impf}}, {{t+|cs|nalézt|pf}}, {{t+|cs|nacházet|impf}}, {{t+|cs|najít|pf}}
