--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -22,8 +22,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 ##* {{RQ:Shakespeare Merchant of Venice|act=IV|scene=i|passage=You must '''cut''' this flesh from off his breast.}}
 ## To [[divide]] with a [[knife]], [[scissors]], or another [[sharp]] [[instrument]].
 ##: {{ux|en|Would you please '''cut''' the cake?}}
-##* {{rfdatek|en|Alexander Pope}}
-##*: Before the whistling winds the vessels fly, / With rapid swiftness '''cut''' the liquid way.
+##* {{RQ:Pope Odyssey|book=III|passage=Before the whistling winds the vessels fly, / With rapid swiftness '''cut''' the liquid way.}}
 ##* {{quote-book|en|date=8 May 2012|page=79|title=Ottolenghi: The Cookbook| author= {{w|Yotam Ottolenghi}}| author2=Sami Tamimi| publisher={{w|Random House}}| url= https://books.google.co.nz/books?id=WFzJR9ZZ7aEC| isbn=9781446407097| passage=First, marinate the tofu. In a bowl, whisk the kecap manis, chilli sauce, and sesame oil together. '''Cut''' the tofu into strips about 1cm thick, mix gently (so it doesn't break) with the marinade and leave in the fridge for half an hour.}}
 ## To [[form]] or [[shape]] by cutting.
 ##: {{ux|en|I have three diamonds to '''cut''' today.}}
