--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -252,6 +252,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Latin: {{t+|la|venio}}, {{t+|la|progredior}}
 * Latvian: {{t+|lv|nākt}}
 * Lithuanian: {{t+|lt|ateiti}}
+* Lushootseed: {{t|lut|ʔəƛ̕}}
 * Lü: {{t|khb|ᦙᦱ}}
 {{trans-mid}}
 * Macedonian: {{t|mk|доаѓа|impf}}, {{t|mk|дојде|pf}}
