--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -14,7 +14,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 # [[fruit|Fruit]] (especially [[peach]]) whose [[flesh]] adheres strongly to the [[pit]].
 #* {{quote-text|en|year=1908|author={{w|O. Henry}}|title=Hostages to Momus| passage=Antelope steaks and fried liver to begin on, and venison cutlets with chili con carne and pineapple fritters, and then some sardines and mixed pickles; and top it off with a can of yellow '''clings''' and a bottle of beer.}}
 # [[adherence]]; [[attachment]]; [[devotion]]
-#* {{RQ:Milton Anim|passage=A more tenacious '''cling''' to worldly respects.}}
+#* {{RQ:Milton Animadversions|139|a more tenacious '''cling''' to worldly reſpects,}}
 
 ====Verb====
 {{en-verb|clings|clinging|clung}}
