--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -25,8 +25,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 # {{lb|en|heading}} ''To sense or think emotionally or judgmentally.''
 ## {{lb|en|transitive}} To experience an emotion or other mental state about.
 ##: {{ux|en|I can '''feel''' the sadness in his poems.}}
-##* {{rfdatek|en|Alexander Pope}}
-##*: Teach me to '''feel''' another's woe.
+##* {{RQ:Pope UP|Teach me to '''feel''' another's woe.}}
 ##* {{RQ:EHough PrqsPrc|I|0105}}
 ##*: Captain Edward Carlisle, soldier as he was, martinet as he was, '''felt''' a curious sensation of helplessness seize upon him as he met her steady gaze, her alluring smile ; he could not tell what this prisoner might do.
 ##* {{quote-journal|en|date=2013-08-10|volume=408|issue=8848| magazine={{w|The Economist}}| author=Lexington| title=[http://www.economist.com/news/united-states/21583274-new-wave-press-barons-should-not-allow-newspapers-become-niche-products-keeping Keeping the mighty honest]| passage=British journalists shun complete respectability, '''feeling''' a duty to be ready to savage the mighty, or rummage through their bins. Elsewhere in Europe, government contracts and subsidies ensure that press barons will only defy the mighty so far.}}
