t+fi:[[liha]] ([[WT:EDIT|Assisted]]) <flesh#59244122>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -187,6 +187,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 {{trans-bottom}}
 
 {{trans-top|(religion) mortal body}}
+* Finnish: {{t+|fi|liha}}
 * French: {{t+|fr|chair|f}}
 * Galician: {{t+|gl|carne|f}}
 * Haitian Creole: {{t|ht|lachè}}
