--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -1,28 +1,48 @@
 {{also|LIBRE|libré}}
 ==English==
+{{was wotd|2020|May|27}}
 
 ===Etymology===
-From {{bor|en|fr|-}} and {{bor|en|es|libre||free, at liberty}}.
+{{PIE root|en|h₁lewdʰ}}
+Sense 1 (“''especially of the will'': free, independent”) is borrowed from {{bor|en|fr|libre|t=at liberty, free; clear, free, vacant; free, without obligation}}, from {{der|en|la|līber|t=free, unrestricted}},<ref>{{R:OED Online|entry=† libre|pos=adj|id=107929|date=1902}}</ref> ultimately from {{der|en|ine-pro|*h₁lewdʰ-|t=people}}.
+
+Sense 2 (“(''software'') with very few limitations on distribution or improvement”) may also be borrowed from {{bor|en|es|libre|t=free (''in various senses''): not enslaved or imprisoned; without obligation; unconstrained by distrust or timidity; not containing, without}}, from the same Latin {{glossary|etymon}} as above.
 
 ===Pronunciation===
-The pronunciation is near to French one.
-* {{a|UK}} {{IPA|en|/ˈliː.bɹə/}}
-* {{homophones|en|Libra}}
-* {{a|US}} {{IPA|en|/ˈli.bɹə/|/ˈli.bɹeɪ/}}
-** {{audio|en|en-us-Libra.ogg|Audio (US)}}
+* Sense 1:
+** {{a|RP}} {{IPA|en|/ˈliːbɹə/|[ˈlibʁ]}}
+** {{a|GA}} {{IPA|en|/ˈlibɹə/}}
+** {{audio|en|En-us-Libra.ogg|Audio (GA)}}
+** {{homophones|en|Libra}}
+* Sense 2:
+** {{a|RP}} {{IPA|en|/ˈliːbɹə/|/-bɹeɪ/}}
+** {{a|GA}} {{IPA|en|/ˈlibɹə/|/-bɹeɪ/}}
+* {{hyphenation|en|li|bre}}
 
 ===Adjective===
 {{en-adj|-}}
 
-# {{lb|en|free software movement}} With very few limitations on distribution or improvement; including [[source code]].
-# {{lb|en|uncommon}} [[free]] (as in freedom); [[independent]].
+# {{lb|en|obsolete|rare}} ''Especially of the [[will#Noun|will]]'': [[free]], [[independent#Adjective|independent]], [[unconstrained]].
+# {{lb|en|software}} With very few [[limitation]]s on [[distribution]] or the [[right#Noun|right]] to [[access#Verb|access]] the [[source code]] to [[create]] [[improved#Adjective|improved]] [[version]]s, but not necessarily [[free of charge]].
 
 ====Usage notes====
-* The latter sense is mainly used to distinguish from the [[gratis]] meaning of the word [[free]].
+Sense 2 (“(''software'') with very few limitations on distribution or improvement”) is chiefly used to distinguish such software (also called [[free software]]) from [[freeware]], which is distributed free of charge or [[gratis]].
 
-===See also===
+====Translations====
+{{trans-top|(''software''): with very few limitations on distribution or improvement}}
+{{trans-mid}}
+{{trans-bottom}}
+
+====See also====
 * {{l|en|free as in speech}}
 * {{l|en|gratis}}
+
+===References===
+<references />
+
+===Further reading===
+* {{pedia|free software}}
+* {{pedia|gratis versus libre|''gratis'' versus ''libre''}}
 
 ===Anagrams===
 * {{anagrams|en|a=beilr|Erbil|Liber.|birle|liber}}
