Added entry <libre#59248408>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -76,6 +76,7 @@ Sense 2 (“(''software'') with very few limitations on distribution or improvem
 {{trans-bottom}}
 
 ====See also====
+* {{l|en|free as in beer}}
 * {{l|en|free as in speech}}
 * {{l|en|gratis}}
 
