--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -49,7 +49,7 @@ Cognate to {{cog|en|basis}}, from PIE via Ancient Greek.
 #* {{quote-book|en|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=5
 |passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
-#* {{quote-book|en|date=11 January 2013|author=David Bell|author2=Gill Valentine|publisher=Routledge|title=Consuming Geographies: We Are Where We Eat|isbn=9781442432949|page=140|url=https://books.google.co.nz/books?id=cM70Uhk0r88C|passage=So I'd have ate when me Dad had ate, sort of thing, I think, you know when he '''come''' home from work, I'd have waited for him, I wouldn't have said I wanted mine at four o'clock{{...}}}}
+#* {{quote-book|en|date=11 January 2013|origdate=1997|author=David Bell|author2=Gill Valentine|publisher=Routledge|title=Consuming Geographies: We Are Where We Eat|isbn=9781442432949|page=140|url=https://books.google.co.nz/books?id=cM70Uhk0r88C|passage=So I'd have ate when me Dad had ate, sort of thing, I think, you know when he '''come''' home from work, I'd have waited for him, I wouldn't have said I wanted mine at four o'clock{{...}}}}
 # {{lb|en|intransitive}} To [[appear]], to [[manifest]] itself.
 #: {{ux|en|The pain in his leg '''comes''' and goes.}}
 #* {{rfdatek|en|Samuel Butler (poet)|Samuel Butler}}, ''{{w|Hudibras}}'':
