--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -18,31 +18,31 @@ The verb became irregular, possibly under the influence of the semantically simi
 ===Noun===
 {{en-noun|~|es}}
 
-# {{lb|en|countable}} The act of [[seizing]] or [[capture|capturing]]. {{jump|act of capturing|s}}
+# {{lb|en|countable}} The act of [[seizing]] or [[capture|capturing]].
 #: ''The '''catch''' of the perpetrator was the product of a year of police work.''
-# {{lb|en|countable}} The act of catching an [[object]] in motion, especially a [[ball]]. {{jump|catching a ball|s|t}}
+# {{lb|en|countable}} The act of catching an [[object]] in motion, especially a [[ball]].
 #: ''The player made an impressive '''catch'''.''
 #: ''Nice '''catch'''!''
-# {{lb|en|countable}} The act of noticing, [[understand]]ing or hearing. {{jump|act of noticing|s|t}}
+# {{lb|en|countable}} The act of noticing, [[understand]]ing or hearing.
 #: ''Good '''catch'''. I never would have remembered that.''
-# {{lb|en|uncountable}} The game of catching a ball. {{jump|ball game|t}}
+# {{lb|en|uncountable}} The game of catching a ball.
 #: ''The kids love to play '''catch'''.''
-# {{lb|en|countable}} Something which is captured or caught. {{jump|something caught|t}} {{jump|quantity captured|s}}
+# {{lb|en|countable}} Something which is captured or caught.
 #: ''The fishermen took pictures of their '''catch'''.''
 #: ''The '''catch''' amounted to five tons of swordfish.''
-# {{lb|en|countable|colloquial|by extension}} A [[find]], in particular a [[boyfriend]] or [[girlfriend]] or prospective [[spouse]]. {{jump|a find|s|t}}
+# {{lb|en|countable|colloquial|by extension}} A [[find]], in particular a [[boyfriend]] or [[girlfriend]] or prospective [[spouse]].
 #: ''Did you see his latest '''catch'''?''
 #: ''He's a good '''catch'''.''
-# {{lb|en|countable}} A stopping [[mechanism]], especially a [[clasp]] which stops something from [[open]]ing. {{jump|stopping mechanism|s|t}}
+# {{lb|en|countable}} A stopping [[mechanism]], especially a [[clasp]] which stops something from [[open]]ing.
 #: ''She installed a sturdy '''catch''' to keep her cabinets closed tight.''
 # {{lb|en|countable}} A [[hesitation]] in voice, caused by strong emotion.
 #: ''There was a '''catch''' in his voice when he spoke his father's name.''
-# {{lb|en|countable|sometimes|_|noun adjunct}} A concealed [[difficulty]], especially in a [[deal]] or [[negotiation]]. {{jump|hidden difficulty|s|t}}
+# {{lb|en|countable|sometimes|_|noun adjunct}} A concealed [[difficulty]], especially in a [[deal]] or [[negotiation]].
 #: ''It sounds like a great idea, but what's the '''catch'''?''
 #: ''Be careful, that's a '''catch''' question.''
 # {{lb|en|countable}} A [[crick]]; a sudden muscle pain during unaccustomed positioning when the muscle is in use.
 #: ''I bent over to see under the table and got a '''catch''' in my side.''
-# {{lb|en|countable}} A [[fragment]] of [[music]] or [[poetry]]. {{jump|fragment of music|s}}
+# {{lb|en|countable}} A [[fragment]] of [[music]] or [[poetry]].
 #* {{quote-book|en|1852|Mrs M.A. Thompson|chapter=The Tutor's Daughter| Graham's American Monthly Magazine of Literature, Art, and Fashion| page=266| url=http://books.google.com/books?id=hdcRAAAAYAAJ| passage=In the lightness of my heart I sang '''catches''' of songs as my horse gayly bore me along the well-remembered road.}}
 #* {{quote-book|en|year=1872|author=Harriet Martineau|title=Deerbrook|page=90|passage="'Fair Enslaver!'" cried Mr. Enderby. "You must know 'Fair Enslaver:' there is not a sweeter '''catch''' than that. Come, Miss Ibbotson, begin; your sister will follow, and I&mdash;"<br>But it so happened that Miss Ibbotson had never heard 'Fair Enslaver.'}}
 # {{lb|en|obsolete}} A state of [[readiness]] to capture or seize; an [[ambush]].
@@ -60,7 +60,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 #*: Let us be [[jocund]]: will you [[troll]] the '''catch''' / You taught me but while-ere?
 #* {{quote-book|en|1966|Allen Tate|T. S. Eliot: The Man and His Work|page=76|url=http://books.google.com/books?id=G5ZaAAAAMAAJ
 |passage=One night, I remember, we sang a '''catch''', written (words and music) by Orlo Williams, for three voices.}}
-# {{lb|en|countable|music}} The [[refrain]]; a line or lines of a song which are repeated from verse to verse. {{jump|refrain|s}}
+# {{lb|en|countable|music}} The [[refrain]]; a line or lines of a song which are repeated from verse to verse.
 #* {{quote-book|en|2003|Robert Hugh Benson|Come Rack! Come Rope!|page=268|url=http://books.google.com/books?id=f5abPx1KeKQC
 |passage=The phrase repeated itself like the '''catch''' of a song.}}
 # {{senseid|en|cricket}} {{lb|en|countable|cricket|baseball}} The act of catching a hit ball before it reaches the ground, resulting in an out.
@@ -80,15 +80,15 @@ The verb became irregular, possibly under the influence of the semantically simi
 #*: We retain a '''catch''' of those pretty stories.
 
 ====Synonyms====
-* {{jump|s|act of capturing}} [[seizure]], [[capture]], [[collar]], [[snatch]]
-* {{jump|s|the act of catching a ball|t}} [[grasp]], [[snatch]]
-* {{jump|s|act of noticing|t}} [[observation]]
-* {{jump|s|a find|t}} [[prize]], [[find]]; [[conquest]], [[beau]]
-* {{jump|s|quantity captured}} [[haul]], [[take]]
-* {{jump|s|stopping mechanism|t}} [[stop]], [[chock]]; [[clasp]], [[hasp]], [[latch]]
-* {{jump|s|hidden difficulty|t}} [[snag]], [[problem]]; [[trick]], [[gimmick]], [[hitch]]
-* {{jump|s|fragment of music}} [[snatch]], [[fragment]]; [[snippet]], [[bit]]
-* {{jump|s|refrain}} [[chorus]], [[refrain]], [[burden]]
+* {{sense|act of capturing}} [[seizure]], [[capture]], [[collar]], [[snatch]]
+* {{sense|the act of catching a ball}} [[grasp]], [[snatch]]
+* {{sense|act of noticing}} [[observation]]
+* {{sense|a find}} [[prize]], [[find]]; [[conquest]], [[beau]]
+* {{sense|quantity captured}} [[haul]], [[take]]
+* {{sense|stopping mechanism}} [[stop]], [[chock]]; [[clasp]], [[hasp]], [[latch]]
+* {{sense|hidden difficulty}} [[snag]], [[problem]]; [[trick]], [[gimmick]], [[hitch]]
+* {{sense|fragment of music}} [[snatch]], [[fragment]]; [[snippet]], [[bit]]
+* {{sense|refrain}} [[chorus]], [[refrain]], [[burden]]
 
 ====Derived terms====
 {{der3|en|title=Terms derived from ''catch''
@@ -214,7 +214,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 {{en-verb|catches|catching|caught}}
 
 # {{lb|en|heading}} ''To capture, overtake.''
-## {{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13<sup>th</sup>c.}}
+## {{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{defdate|from 13<sup>th</sup>c.}}
 ##: {{ux|en|I hope I '''catch''' a fish.&emsp; {{nowrap|He ran but we '''caught''' him at the exit.}}&emsp; {{nowrap|The police '''caught''' the robber at a nearby casino.}}}}
 ## {{lb|en|transitive}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14<sup>th</sup>c.}}
 ##* '''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'', [[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13]]:
@@ -251,7 +251,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 ## {{lb|en|intransitive}} To be [[hold back|held back]] or [[impede]]d.
 ##: {{ux|en|Be careful your dress doesn't '''catch''' on that knob.&emsp; {{nowrap|His voice '''caught''' when he came to his father's name.}}}}
 ##* {{RQ:Jefferies Amateur Poacher|chapter=II|passage=Orion hit a rabbit once; but though sore wounded it got to the bury, and, struggling in, the arrow '''caught''' the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.}}
-## {{lb|en|intransitive}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process. {{jump|engage|t}}
+## {{lb|en|intransitive}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process.
 ##: {{ux|en|Push it in until it '''catches'''.&emsp; {{nowrap|The engine finally '''caught''' and roared to life.}}}}
 ## {{lb|en|transitive}} To have something be [[hold back|held back]] or [[impede]]d.
 ##: {{ux|en|I '''caught''' my heel on the threshold.}}
@@ -267,12 +267,12 @@ The verb became irregular, possibly under the influence of the semantically simi
 ## {{lb|en|transitive|surfing}} To contact a [[wave]] in such a way that one can ride it back to [[shore]].
 ##* '''2001''', John Lull, ''[http://books.google.com/books?id=h5IVyQlKsL4C Sea Kayaking Safety & Rescue]'', p.203:
 ##*: If you are surfing a wave through the rocks, make sure you have a clear route before '''catching''' the wave.
-## {{lb|en|transitive|computing}} To handle an [[exception]]. {{jump|handle error|t}} {{defdate|from 20<sup>th</sup>c.}}
+## {{lb|en|transitive|computing}} To handle an [[exception]]. {{defdate|from 20<sup>th</sup>c.}}
 ##: {{ux|en|When the program '''catches''' an exception, this is recorded in the log file.}}
 # {{lb|en|heading}} ''To intercept.''
-## {{lb|en|transitive}} To [[seize]] or intercept an object moving through the air (or, sometimes, some other medium). {{jump|seize in motion|s|t}} {{defdate|from 16<sup>th</sup>c.}}
+## {{lb|en|transitive}} To [[seize]] or intercept an object moving through the air (or, sometimes, some other medium). {{defdate|from 16<sup>th</sup>c.}}
 ##: {{ux|en|I will throw you the ball, and you '''catch''' it.&emsp; {{nowrap|Watch me '''catch''' this raisin in my mouth.}}}}
-## {{lb|en|transitive|now|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{jump|seize opportunity|t}} {{defdate|from 16<sup>th</sup>c.}}
+## {{lb|en|transitive|now|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{defdate|from 16<sup>th</sup>c.}}
 ##* '''1811''', {{w|Jane Austen}}, ''{{w|Sense and Sensibility}}'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
 ##*: she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself,{{nb...}}.
 ## {{lb|en|transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18<sup>th</sup>c.}}
@@ -297,14 +297,14 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##*: the sails '''caught''' and filled, and the boat jumped to life beneath us.
 ## {{lb|en|transitive}} To [[acquire]], as though by infection; to take on through sympathy or infection. {{defdate|from 16<sup>th</sup>c.}}
 ##: {{ux|en|She finally '''caught''' the mood of the occasion.}}
-## {{lb|en|transitive}} To be [[hit]] by something. {{jump|be hit|s}}
+## {{lb|en|transitive}} To be [[hit]] by something.
 ##: {{ux|en|He '''caught''' a bullet in the back of the head last year.}}
 ## {{lb|en|intransitive}} To [[serve]] well or poorly for catching, especially for catching fish.
 ##* {{quote-book|en|year=1877|title=[http://books.google.com/books?id=tXUSAAAAYAAJ Annual Report of the Ohio State Board of Agriculture]| page=135| passage=The nets '''caught''' well, and Mr. Deeley reported it the best fishing ground he ever tried.}}
 ## {{lb|en|intransitive|}} To get pregnant.
 ##: {{ux|en|Well, if you didn't '''catch''' this time, we'll have more fun trying again until you do.}}
 # {{lb|en|heading}} ''To take in with one's senses or intellect.''
-## {{lb|en|transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{jump|perceive and understand|t}} {{defdate|from 16<sup>th</sup>c.}}
+## {{lb|en|transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{defdate|from 16<sup>th</sup>c.}}
 ##: {{ux|en|Did you '''catch''' his name?&emsp; {{nowrap|Did you '''catch''' the way she looked at him?}}}}
 ##* {{RQ:Chmbrs YngrSt|IX}}
 ##*: “A tight little craft,” was Austin’s invariable comment on the matron;{{nb...}}. ¶ Near her wandered her husband, orientally bland, invariably affable, and from time to time squinting sideways, as usual, in the ever-renewed expectation that he might '''catch''' a glimpse of his stiff, retroussé moustache.
@@ -324,9 +324,9 @@ The verb became irregular, possibly under the influence of the semantically simi
 * The older past and passive participle {{m|en|catched}} is now nonstandard.
 
 ====Synonyms====
-* {{jump|s|seize in motion}} [[fang]], [[snatch]], [[grab]]
-* {{jump|s|capture prey}} [[capture]], [[take]]; [[snare]], [[hook]]
-* {{jump|s|be hit}} [[take]], [[get]]
+* {{sense|seize in motion}} [[fang]], [[snatch]], [[grab]]
+* {{sense|capture prey}} [[capture]], [[take]]; [[snare]], [[hook]]
+* {{sense|be hit}} [[take]], [[get]]
 
 ====Antonyms====
 * {{l|en|drop}}, {{l|en|release}}
@@ -400,7 +400,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Yiddish: {{t|yi|כאַפּן}}
 {{trans-bottom}}
 
-{{trans-top|to intercept an object in the air etc. {{jump|t|seize object}}}}
+{{trans-top|to intercept an object in the air etc.}}
 * Arabic: {{t|ar|أَمْسَكَ}}, {{t|ar|مَسَكَ}}
 * Armenian: {{t+|hy|բռնել}}
 * Assamese: {{t|as|ধৰা}}
@@ -467,7 +467,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Vietnamese: {{t+|vi|mắc}}
 {{trans-bottom}}
 
-{{trans-top|to perceive and understand {{jump|t|perceive and understand}}}}
+{{trans-top|to perceive and understand}}
 * Basque: {{t|eu|harrapatu}}
 * Bulgarian: {{t+|bg|схващам}}
 * Chinese:
@@ -492,7 +492,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Swedish: {{t+|sv|fatta}} {{qualifier|colloquial}}, {{t+|sv|uppfatta}}
 {{trans-bottom}}
 
-{{trans-top|to seize an opportunity {{jump|t|seize opportunity}}}}
+{{trans-top|to seize an opportunity}}
 * Czech: {{t+|cs|chytit}}, {{t|cs|chytnout}}
 * Danish: {{t|da|gribe}}
 * Dutch: {{t+|nl|grijpen}}
@@ -502,7 +502,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Swedish: {{t+|sv|gripa}}
 {{trans-bottom}}
 
-{{trans-top|to reach in time to leave {{jump|t|reach in time}}}}
+{{trans-top|to reach in time to leave}}
 * Bulgarian: {{t+|bg|хващам}}
 * Burmese: {{t+|my|စီး|sc=Mymr}}
 * Czech: {{t+|cs|chytit}}, {{t|cs|chytnout}}
@@ -521,14 +521,14 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Welsh: {{t+|cy|dal}}
 {{trans-bottom}}
 
-{{trans-top|to engage, stick, or grasp {{jump|t|engage}}}}
+{{trans-top|to engage, stick, or grasp}}
 * Bulgarian: {{t|bg|закачам се}}
 * Czech: {{t+|cs|chytit}} se, {{t|cs|chytnout}} se
 {{trans-mid}}
 * Finnish: {{t+|fi|tarttua}}
 {{trans-bottom}}
 
-{{trans-top|to handle a computer error, especially an exception {{jump|t|handle error}}}}
+{{trans-top|to handle a computer error, especially an exception}}
 * Finnish: {{t+|fi|siepata}}
 * French: {{t+|fr|intercepter}}
 * Interlingue: {{t|ie|capter}}
