/* English */ derived terms <catch#59302242>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -91,18 +91,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * {{sense|refrain}} [[chorus]], [[refrain]], [[burden]]
 
 ====Derived terms====
-{{der3|en|title=Terms derived from ''catch''
-|bycatch
-|catch a wave
-|catch fence
-|catchful
-|catch me
-|catch of the day
-|catch one's death
-|catch points
-|catch some rays
-|catchy|crowd catch
-}}
+See below.
 
 ====Translations====
 {{trans-top|the act of catching a ball}}
@@ -332,9 +321,6 @@ The verb became irregular, possibly under the influence of the semantically simi
 ====Antonyms====
 * {{l|en|drop}}, {{l|en|release}}
 
-====Derived terms====
-{{der4|en|catchable|catchall|catchbasin|catcher|catch one's breath|catch-breath|catch cold|catch a cold|catch a crab|catch a tan|catch as catch can|catch fire|catch it|catch on|catch out|catch over|catch up|caught in the act|uncatch}}
-
 ====Translations====
 {{trans-top|to capture or snare}}
 * Assamese: {{t|as|ধৰ}}, {{t|as|আয়ত্ত কৰা}}
@@ -547,6 +533,21 @@ The verb became irregular, possibly under the influence of the semantically simi
 * Romanian: {{t+check|ro|prinde}}
 * Spanish: {{t+check|es|atrapar}}
 {{trans-bottom}}
+
+===Derived terms===
+{{der4|en|title=Terms derived from the noun and verb ''catch''
+|catchable|catchall|catchbasin|catcher|catch one's breath|catch-breath|catch cold|catch a cold|catch a crab|catch a tan|catch as catch can|catch fire|catch it|catch on|catch out|catch over|catch up|caught in the act|uncatch
+|bycatch
+|catch a wave
+|catch fence
+|catchful
+|catch me
+|catch of the day
+|catch one's death
+|catch points
+|catch some rays
+|catchy|crowd catch
+}}
 
 ===References===
 <references />
