/* Derived terms */ <catch#59302252>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -535,7 +535,7 @@ See below.
 {{trans-bottom}}
 
 ===Derived terms===
-{{der4|en|title=Terms derived from the noun and verb ''catch''
+{{der4|en|title=Terms derived from the noun and verb '''catch'''
 |catchable|catchall|catchbasin|catcher|catch one's breath|catch-breath|catch cold|catch a cold|catch a crab|catch a tan|catch as catch can|catch fire|catch it|catch on|catch out|catch over|catch up|caught in the act|uncatch
 |bycatch
 |catch a wave
