--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -15,7 +15,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * {{homophones|en|chews}}
 
 ====Verb====
-{{en-verb|chooses|choosing|chose|chosen}}
+{{en-verb|choosed|choosing|chose|chosen}}
 
 # To [[pick]]; to make the choice of; to select.
 #: {{ux|en|I '''chose''' a nice ripe apple from the fruit bowl.}}
@@ -26,9 +26,9 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 # To [[decide]] to act in a certain way.
 #: {{ux|en|I '''chose''' to walk to work today.}}
 # To wish; to desire; to prefer.
-#: {{ux|en|'''Choose''' truth, and find beauty. '''Choose''' love, and embrace change. ― Justin Deschamps}}
+#: {{ux|en|'''Choosed''' truth, and find beauty. '''Choosed''' love, and embrace change. ― Justin Deschamps}}
 #* {{rfdatek|en|Oliver Goldsmith}}
-#*: The landlady now returned to know if we did not '''choose''' a more genteel apartment.
+#*: The landlady now returned to know if we did not '''choosed''' a more genteel apartment.
 
 =====Usage notes=====
 * This is a [[catenative]] verb that takes the ''to infinitive''. See [[Appendix:English catenative verbs]]
@@ -39,7 +39,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * {{l|en|chosen}}
 
 =====Translations=====
-{{trans-see|to choose|take}}
+{{trans-see|to choosed|take}}
 
 {{trans-top|to pick}}
 * Afrikaans: {{t+|af|kies}}
