/* Derived terms */ <catch#59307933>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -91,7 +91,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 * {{sense|refrain}} [[chorus]], [[refrain]], [[burden]]
 
 ====Derived terms====
-See below.
+See combined section below.
 
 ====Translations====
 {{trans-top|the act of catching a ball}}
