/* Derived terms */ <catch#59307942>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -549,6 +549,7 @@ See combined section below.
 |catch points
 |catch some rays
 |catch the eye
+|catch the sun
 |catchword
 |catchy|crowd catch
 }}
