--- a/en/旵/旵.16925.wikitext
+++ b/en/旵/旵.16925.wikitext
@@ -11,12 +11,34 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[caam2]]|y=chaam2}}
+===Pronunciation===
+{{zh-pron
+|m=chǎn
+|m-s=
+|dg=
+|c=caam2
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{rfdef|yue|sort=日03}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
@@ -31,13 +53,4 @@
 # {{rfdef|ja|sort=日03}}
 
 ====Readings====
-* {{ja-readings|on=[[たん]] (tan), [[てん]] (ten)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chǎn]] ([[chan3]])|wg=ch'an<sup>3</sup>}}
-
-# {{rfdef|cmn|sort=日03}}
+* {{ja-readings|on=たん,てん|kun=}}
