--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -38,7 +38,8 @@
 |md=sô̤i
 |mn=xm,zz,tp,kh,tn,yl,mg,tc:chē/qz,lk:chěr/jj,ph:chě/sx,km,hc:chēr/qz:chǒ/xm,zz,tw:chō/qz:chǒ͘
 |mn_note=chē/chěr/chě/chēr, chǒ - vernacular; chō/chǒ͘ - literary
-|mn-t=zo6
+|mn-t=zo6/zê6
+|mn-t_note=zo6 - Chaozhou, Shantou; zê6 - Shanwei
 |w=3zu
 |x=zo5/zo4
 |x_note=zo5 - vernacular; zo4 - literary
