--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -1,5 +1,5 @@
-{{also|☵}}
 {{character info}}
+
 ==Translingual==
 
 ===Han character===
@@ -43,7 +43,7 @@
 # [[pit]], [[hole]]
 # [[snare]], [[trap]]
 # [[crisis]]
-# 6th of the 8 [[w:Ba Gua|trigrams]]
+# 6th of the 8 [[w:Ba Gua|trigram]]s ([[☵]])
 # 29th [[hexagram]] of the [[I Ching]]
 # {{zh-short|坎德拉}}
 
