--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -104,7 +104,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Bengali: {{t|bn|পাকস্থলী|sc=Beng}}
 * Breton: {{t+|br|stomog|m}}
 * Brunei Malay: {{t|kxd|parut}}
-* Bulgarian: {{t+|bg|стома́х|m|sc=Cyrl}}, {{t|bg|желъ̀дък|m}}
+* Bulgarian: {{t+|bg|стома́х|m|sc=Cyrl}}, {{t|bg|желъ́дък|m}}
 * Burmese: {{t+|my|ဝမ်း}}
 * Catalan: {{t+|ca|estómac|m}}
 * Central Melanau: {{t|mel|pait}}
