--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -166,7 +166,7 @@ From {{inh|en|enm|founden}}, from {{der|en|fro|founder}} (Modern French: {{m|fr|
 * WordNet 3.1: A Lexical Database for English, Princeton University
 
 ===Etymology 3===
-Borrowed from {{bor|en|frm|fondre}}, from {{der|en|la|fundō|fundere}}. Cognate with {{cog|es|fundir}} and {{m|es|hundir}}.
+From {{inh|en|enm|founden}}, from {{der|en|fro|fondre}}, from {{der|en|la|fundō|fundere}}. Cognate with {{cog|es|fundir}} and {{m|es|hundir}}.
 
 ====Verb====
 {{en-verb}} {{tlb|en|transitive}}
