--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -26,10 +26,19 @@ Note the different forms, corresponds to different forms of [[真]].
 ===Pronunciation===
 {{zh-pron
 |m=shèn
+|m-s=
 |c=san6
+|c-t=
+|g=
+|h=pfs=sṳ́m
+|j=
+|mb=
+|md=
 |mn=sīn/twv:sīm
 |mn-t=sim7/sim2
 |mn-t_note=sim2 - 俗讀
+|w=
+|x=
 |mc=y
 |oc=y
 |cat=a
@@ -41,7 +50,7 @@ Note the different forms, corresponds to different forms of [[真]].
 # [[prudent]]; [[cautious]]; [[careful]]
 
 ===Compounds===
-{{zh-der|慎刑|慎獨|勤慎|慎微|慎終追遠|慎默|慎重其事|慎重|慎謀能斷|慎言|慎終若始|慎思明辨|慎密|慎子|慎始敬終|慎始|慎終如始|小心謹慎|慎小謹微|不慎|慎行|審慎|恪慎|慎防|失慎|慎防杜漸|慎思|明賞慎罰|杜微慎防|淑慎|敬小慎微|明慎|明德慎罰|清慎|敬慎|日慎一日|謹慎|謹謹慎慎|肅慎|謹言慎行|謹小慎微}}
+{{zh-der|慎刑|慎獨|勤慎|慎微|慎終追遠|慎默|慎重其事|慎重|慎謀能斷|慎言|慎終若始|慎思明辨|慎密|慎子|慎始敬終|慎始|慎終如始|小心謹慎|慎小謹微|不慎|慎行|審慎|恪慎|慎防|失慎|慎防杜漸|慎思|明賞慎罰|杜微慎防|淑慎|敬小慎微|明慎|明德慎罰|清慎|敬慎|日慎一日|謹慎|謹謹慎慎|肅慎|謹言慎行|謹小慎微|戒慎}}
 
 ----
 
