--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -59,7 +59,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 #*: '''Spoke''' the ship ''Union'' of Newport, without any anchor. The next day ran down to Acra, where the windlass was again capsized and the pawls broken.
 
 =====Usage notes=====
-* {{sense|language}} In English, the word ''know'' is often omitted. When someone says ''I don't speak Italian'', it means that the person doesn't know to speak Italian, it doesn't mean that he refuses, but when someone says ''I don't speak in Italian'' with the word ''in'', it means that the person refuses.
+* {{sense|language}} In English, the word ''know'' is often omitted. If asked whether he speaks Italian, for instance, an English native would respond ''I don't speak Italian''. This means that he does not know how to speak Italian, rather than that he does not want to speak Italian. If he does indeed not want to speak in Italian, he might reply ''I do not wish to speak in Italian'', or something similar. Most of the time, this is obvious by context anyway.
 
 ====Synonyms====
 * {{l|en|articulate}}, {{l|en|talk}}, {{l|en|verbalize}}
