t+kk:[[таңбаша]] t-balance ([[WT:EDIT|Assisted]]) <icon#59352533>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -182,9 +182,10 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Greek: {{t+|el|εικονίδιο|n}}
 * Hungarian: {{t+|hu|ikon}}
 * Irish: {{t|ga|íocón|m}}
-{{trans-mid}}
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t+|ja|アイコン|tr=aikon}}
+{{trans-mid}}
+* Kazakh: {{t+|kk|таңбаша}}
 * Korean: {{t+|ko|아이콘}}
 * Maori: {{t|mi|ata}}
 * Norman: {{t|nrf|icône}}
