--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|mul=names of Germany}}
 
 ===Etymology===
-From {{inh|en|enm|Germanie}}, from {{inh|en|ang|Germania}}, from {{der|en|la|Germānia|t=land of the Germans}}, from {{m|la|Germānī}}, a people living around and east of the [[Rhine]] first attested in the {{nowrap|1st century {{B.C.}}}} works of {{w|Julius Caesar}} and of uncertain etymology. The [[exonym]] was said by {{w|Strabo}} to derive from {{m|la|germānus}} ("[[close]] [[kin]]; [[genuine]]"), making it cognate with "[[germane]]" and "[[german]]", but this seems unsupported. Attempts to derive it from Germanic or Celtic roots since the 18th century<ref>See, for example, the variety of derivations cited at "[http://books.google.com/books?id=zoY_AAAAMAAJ&pg=PT261 Germans]" in the Rev.&nbsp;George William Lemon's ''English Etymology'' (1788).</ref> are all problematic,<ref name=oed>''Oxford English Dictionary'', {{nowrap|3rd ed.}} "German, ''adj.'' and ''n''". Oxford University Press (Oxford), 2012.</ref> although it is perhaps cognate with the {{cog|sga|gair}} ("[[neighbor]]").<ref name=codee>''The Concise Oxford Dictionary of English Etymology''. "German". Oxford University Press (Oxford), 1996.</ref>
+From {{inh|en|e {{inh|en|ang|Germania}}, from {{der|en|la|Germānia|t=land of the Germans}}, from {{m|la|Germānī}}, a people living around and east of the [[Rhine]] first attested in the {{nowrap|1st century {{B.C.}}}} works of {{w|Julius Caesar}} and of uncertain etymology. The [[exonym]] was said by {{w|Strabo}} to derive from {{m|la|germānus}} ("[[close]] [[kin]]; [[genuine]]"), making it cognate with "[[germane]]" and "[[german]]", but this seems unsupported. Attempts to derive it from Germanic or Celtic roots since the 18th century<ref>See, for example, the variety of derivations cited at "[http://books.google.com/books?id=zoY_AAAAMAAJ&pg=PT261 Germans]" in the Rev.&nbsp;George William Lemon's ''English Etymology'' (1788).</ref> are all problematic,<ref name=oed>''Oxford English Dictionary'', {{nowrap|3rd ed.}} "German, ''adj.'' and ''n''". Oxford University Press (Oxford), 2012.</ref> although it is perhaps cognate with the {{cog|sga|gair}} ("[[neighbor]]").<ref name=codee>''The Concise Oxford Dictionary of English Etymology''. "German". Oxford University Press (Oxford), 1996.</ref>
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/ˈd͡ʒɜː.mə.nɪ/}}
