--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -15,7 +15,7 @@ From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}
 ===Noun===
 {{en-noun}}
 
-# An [[tree]], ''[[Olea europaea]]'', cultivated since ancient times in the Mediterranean for its [[fruit]] and the [[oil]] obtained from it.
+# A [[tree]], ''[[Olea europaea]]'', cultivated since ancient times in the Mediterranean for its [[fruit]] and the [[oil]] obtained from it.
 # The small oval [[fruit]] of this tree, eaten ripe (usually black) or unripe (usually green).
 # The wood of the olive tree.
 # A dark yellowish-[[green]] [[color]], that of an unripe olive.
