--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -31,9 +31,9 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 #: {{ux|en|She scribbled a '''curve''' on the paper.}}
 # A grading system based on the scale of performance of a group used to [[normalize]] a right-[[skewed]] grade distribution (with more lower scores) into a [[bell curve]], so that more can receive higher grades, regardless of their actual knowledge of the subject.
 #: {{ux|en|The teacher was nice and graded the test on a '''curve'''.}}
-# {{lb|en|analytic geometry}} A [[continuous map]] from a one-[[dimensional]] [[space]] to a multidimensional space.
-# {{lb|en|geometry}} A one-dimensional figure of [[non-zero]] length; the [[graph]] of a continuous map from a one-dimensional space.
-# {{lb|en|algebraic geometry}} An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
+# {{lb|en|analytic geometry}} A [[continuous]] [[map]] from a one-[[dimensional]] [[space]] to a multidimensional space.
+# {{lb|en|geometry}} A one-dimensional [[figure]] of non-zero length; the [[graph]] of a continuous map from a one-dimensional space.
+# {{lb|en|algebraic geometry}} An [[algebraic]] curve; a [[polynomial]] [[relation]] of the planar coordinates.
 # {{lb|en|topology}} A one-dimensional [[continuum]].
 # {{lb|en|informal|usually|in the plural}} The attractive shape of a woman's body.
 
