--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -137,8 +137,8 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t+|ku|ئێسک سووک}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
-* Laboya: {{t|lmy|jorro}}
 {{trans-mid}}
+* Laboya: {{t|lmy|jorro}}
 * Lao: {{t|lo|ງາມ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
@@ -153,6 +153,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
 * Middle English: {{t|enm|beautevous}}, {{t|enm|wynsom}}
 * Mongolian: {{t+|mn|сайхан|sc=Cyrl}}, {{t+|mn|гуа}}
+* Mòcheno: {{t|mhn|schea'}}
 * Navajo: {{t|nv|nizhóní}}, {{t|nv|nizhóní yeeʼ}}
 * Norman: {{t|nrf|bieau|m}}, {{t|nrf|belle|f}}
 * Northern Thai: {{t-needed|nod}}
