--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -295,6 +295,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Norwegian:
 *: Bokmål: {{t+|nb|plomme|m|f}}
 *: Nynorsk: {{t|nn|plomme|f}}
+* Occitan: {{t+|oc|pruna|f}}
 * Old English: {{t|ang|plūme|f}}
 * Old High German: {{t|goh|pfrūma}}
 * Papiamentu: {{t|pap|preimu}}
