--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -31,8 +31,8 @@ From {{inh|en|enm|fighten}}, from {{inh|en|ang|feohtan||to fight, combat, strive
 |passage=[Edmund] Burke continued to '''fight''' for liberty later on in life. He backed Americans in their campaign for freedom from British taxation. He supported Catholic freedoms and freer trade with Ireland, in spite of his constituents’ ire. He wanted more liberal laws on the punishment of debtors.}}
 # {{lb|en|transitive}} To conduct or engage in (battle, warfare etc.).
 #: {{ux|en|The battle was '''fought''' just over that hill.}}
-#* {{rfdatek|en|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}}
-#*: He had to '''fight''' his way through the world.
+#* '''1856''', {{w|Thomas Macaulay}}, ''Life of Samuel Johnson''
+#*: was left to '''fight''' his way through the world.
 #* {{RQ:KJV|2 Timothy|4|7}}
 #*: I have '''fought''' a good fight.
 # {{lb|en|transitive}} To engage in combat with; to oppose physically, to contest with.
