<United States of America#59380227>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -2,8 +2,8 @@
 [[Image:Flag of the United States.svg|right|thumb|250px|The flag of the '''United States of America''']]
 
 ===Pronunciation===
-* {{a|RP}} {{IPA|en|/juːˌnaɪtɨd ˌsteɪts əv əˈmɛɹɨkə/}}
-* {{a|GA}} {{enPR|yo͞o-nī'tĭd stāts' əv ə-mĕrʹĭ-kə}}, {{IPA|en|/juˌnaɪtɪ̈d ˌsteɪts əv əˈmɛɹɪ̈kə/}}
+* {{a|RP}} {{IPA|en|/juː.ˌnaɪ.tɨd ˌsteɪts əv əˈmɛɹ.ɨ.kə/}}
+* {{a|GA}} {{enPR|yo͞o-nī'tĭd stāts' əv ə-mĕrʹĭ-kə}}, {{IPA|en|/ju.ˌnaɪ.tɪ̈d ˌsteɪts əv əˈmɛɹ.ɪ̈.kə/}}
 * {{audio|en|en-uk-United States of America.ogg|Audio (UK)}}
 * {{rhymes|en|ɛɹɪkə}}
 * {{hyph|en|Unit|ed States of Amer|i|ca}}
