--- a/en/傕/傕.11175.wikitext
+++ b/en/傕/傕.11175.wikitext
@@ -57,6 +57,6 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|reading=[[quyết]], [[giác]]|rs=人10}}
+{{vi-readings|reading=[[giác]], [[quyết]]|rs=人10}}
 
 # {{rfdef|vi}}
