t+ka:[[ნივთიერება]] ([[WT:EDIT|Assisted]]) <substance#59408459>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -201,6 +201,7 @@ From {{der|en|fro|substance}}, from {{der|en|la|substantia|t=substance, essence}
 
 {{trans-top|a form of matter with constant chemical composition and characteristic properties}}
 * Galician: {{t+|gl|substancia|f}}
+* Georgian: {{t|ka|ნივთიერება}}
 * Irish: {{t|ga|damhna|m}}
 {{trans-mid}}
 * Maori: {{t|mi|pūmatū}}
