sounds like a fair rule to me <push#59415504>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -46,7 +46,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 # {{lb|en|computing}} To [[publish]] (an update, etc.) by transmitting it to other computers.
 #* {{quote-book|en|year=2002|author=Lars Powers, Mike Snell| title=Visual Basic Programmer's Guide to the .NET Framework Class Library| page=968| passage=Because this version of the Windows Installer is aware of the GAC, it has the capability to publish components into it. {{...}} You can manually or programmatically '''push''' an assembly into the GAC by using the command-line tool Gacutil.exe.}}
 # {{lb|en|obsolete}} To thrust the points of the horns against; to [[gore]].
-#* Bible, Exodus xxi. 32
+#* {{RQ:KJV|Exodus|21|32}}
 #*: If the ox shall '''push''' a manservant or maidservant, {{...}} the ox shall be stoned.
 # To burst out of its pot, as a bud or shoot.
 # {{lb|en|snooker}} To strike the [[cue ball]] in such a way that it stays in contact with the [[cue]] and [[object ball]] at the same time (a foul shot).
