Minor copyediting <libre#59431175>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{PIE root|en|h₁lewdʰ}}
-Sense 1 (“''especially of the will'': free, independent”) is borrowed from {{bor|en|fr|libre|t=at liberty, free; clear, free, vacant; free, without obligation}}, from {{der|en|la|līber|t=free, unrestricted}},<ref>{{R:OED Online|entry=† libre|pos=adj|id=107929|date=1902}}</ref> ultimately from {{der|en|ine-pro|*h₁lewdʰ-|t=people}}.
+Sense 1 (“especially of the will: free, independent”) is borrowed from {{bor|en|fr|libre|t=at liberty, free; clear, free, vacant; free, without obligation}}, from {{der|en|la|līber|t=free, unrestricted}},<ref>{{R:OED Online|entry=† libre|pos=adj|id=107929|date=1902}}</ref> ultimately from {{der|en|ine-pro|*h₁lewdʰ-|t=people}}.
 
 Sense 2 (“(''software'') with very few limitations on distribution or improvement”) is either borrowed from the French word or the {{bor|en|es|libre|t=free (''in various senses''): not enslaved or imprisoned; without obligation; unconstrained by distrust or timidity; not containing, without}}, from the same Latin {{glossary|etymon}} as above.
 
@@ -22,7 +22,7 @@ Sense 2 (“(''software'') with very few limitations on distribution or improvem
 ===Adjective===
 {{en-adj|-}}
 
-# {{lb|en|obsolete|rare}} ''Especially of the [[will#Noun|will]]'': [[free]], [[independent#Adjective|independent]], [[unconstrained]].
+# {{lb|en|obsolete|rare}} Especially of the [[will#Noun|will]]: [[free]], [[independent#Adjective|independent]], [[unconstrained]].
 #* {{quote-book|en|author=Alexander Hume|authorlink=Alexander Hume|chapter=Of Gods Benefites Bestowed vpon Man|title=Hymnes, or Sacred Songs,{{nb...|wherein the Right Use of Poësie may be Espied. Be Alexander Hume. Wherevnto are Added, the Experience of the Authors Youth, and Certain Precepts Seruing to the Practise of Santification. The Table Followes in the Next Page.}}|location=Edinburgh|publisher=Printed by [[w:Robert Waldegrave|Robert Walde-graue]],{{nb...|printer to His Kings Majestie.}}|year=1599|oclc=1125487371|newversion=republished as|editor2=John Gardiner Kinnear|title2=Hymns and Sacred Songs,{{nb...|by Alexander Hume. Reprinted from the Edition of Waldegrave, 1599.}}|series2={{w|Bannatyne Club}} Publications|seriesvolume2=41|location2=Edinburgh|publisher2=Printed by [[w:James Ballantyne|Ballantyne and Co.]] [for the Bannatyne Club]|year2=1832|page2=10|pageurl2=https://babel.hathitrust.org/cgi/pt?id=uc1.$c25424&view=1up&seq=38|oclc2=811774852|passage=He [God] [[w:Adam|Adame]] lent a '''libre''' will to follow what he liſt, / And with his holy ſpirit, and grace his choſen dois aſſiſt: [...]}}
 # {{lb|en|software}} With very few [[limitation]]s on [[distribution]] or the [[right#Noun|right]] to [[access#Verb|access]] the [[source code]] to [[create]] [[improved#Adjective|improved]] [[version]]s, but not necessarily [[free of charge]].
 #* {{quote-book|en|author=Philippe Aigrain|authorlink=Philippe Aigrain|chapter=Libre Software Policies at the European Level|editors=Joseph Feller, [[w:Brian Fitzgerald (academic)|Brian Fitzgerald]], Scott A. Hissam, and {{w|Karim R. Lakhani}}|title=Perspectives on Free and Open Source Software|location=Cambridge, Mass.; London|publisher={{w|MIT Press}}|year=2005|pages=454–455|pageurl=https://books.google.com/books?id=C0Z30r8qdpcC&pg=PA454|isbn=978-0-262-06246-6|passage=The great potential of '''libre''' software for development and social inclusion has long been emphasized. The cost aspect of it, though it might act as a driver, is only one limited aspect of the benefits of '''libre''' software in developing countries, deprived regions, or urban areas. The empowerment of persons and groups to not only use technology, but understand it, at the level and rhythm that fits them, with the resulting ability to become active contributors and to innovate are the essence of '''libre''' software.}}
