/* Translations */ Added Sanskrit translation of this word. <come#59444073>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -291,7 +291,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Romanian: {{t+|ro|veni}}
 * Romansch: {{t|rm|vegnir}}, {{t|rm|vagnir}}, {{t|rm|neir}}, {{t|rm|gnir}}
 * Russian: {{t+|ru|приходи́ть|impf}}, {{t+|ru|прийти́|pf}}; {{t+|ru|приезжа́ть|impf}}, {{t+|ru|прие́хать|pf}} {{qualifier|by transport}}
-* Sanskrit: {{t-needed|sa}}
+* Sanskrit: {{t+|sa|गमति}}
 * Sardinian: {{t|sc|bènnere}}, {{t|sc|benni}}, {{t|sc|bènniri}}, {{t|sc|vènnere}}
 * Scots: {{t|sco|cum}}
 * Scottish Gaelic: {{t|gd|thig}}
