--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -76,11 +76,8 @@
 * {{ja-r|本旨|ほんし}}
 
 ===Etymology===
-{{ja-kanjitab|むね|yomi=k}}
+{{ja-kanjitab|むね|yomi=k|alt=宗}}
 {{rfe|ja}}
-
-====Alternative forms====
-* {{ja-l|宗}}
 
 ====Pronunciation====
 {{ja-pron|むね|acc=2|acc_ref=DJR|acc2=1|acc2_ref=DJR}}
