t+be:[[харошы]] ([[WT:EDIT|Assisted]]) <beautiful#59457474>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -76,7 +76,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Bashkir: {{t|ba|матур}}
 * Basque: {{t-needed|eu}}
 * Belait: {{t|beg|jie batien}}
-* Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}
+* Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}, {{t|be|харо́шы}}
 * Bengali: {{t|bn|সুন্দর|sc=Beng}}
 * Bikol Central: {{t|bcl|magayon}}
 * Breton: {{t+|br|brav}}, {{t+|br|kaer}}
