change quote to similar one that I could actually find <cut#59466587>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -38,8 +38,8 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 ##*: “My Continental prominence is improving,” I commented dryly. ¶ Von Lindowe '''cut''' at a furze bush with his silver-mounted rattan. ¶ “Quite so,” he said as dryly, his hand at his mustache. “I may say if your intentions were known your life would not be worth a curse.”
 ## To wound or hurt deeply the sensibilities of; to pierce.
 ##: {{ux|en|Sarcasm '''cuts''' to the quick.}}
-##* {{rfdatek|en|Joseph Addison}}
-##*: The man was '''cut''' to the heart.
+##* '''1829''', Elijah Hoole, ''Personal Narrative of a Mission to the South of India, from 1820 to 1828''
+##*: she feared she should laugh to hear an European preach in Tamul , but on the contrary , was '''cut''' to the heart by what she heard
 ## To [[castrate]] or [[geld]].
 ##: {{ux|en|to '''cut''' a horse}}
 ## To [[interfere]], as a horse; to strike one foot against the opposite foot or ankle in using the legs.
