/* Translations */ Added Sanskrit translation of this word. <fight#59468200>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -415,6 +415,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Romanian: {{t+|ro|luptă|f}}, {{t+|ro|bătaie}}
 * Romansch: {{qualifier|military}} {{t|rm|cumbat|m}}, {{t|rm|cumbata|f}}, {{qualifier|sport}} {{t|rm|lutga|f}}
 * Russian: {{t+|ru|дра́ка|f}}, {{t+|ru|бой|m}}, {{t+|ru|сты́чка|f}}
+* Sanskrit: {{t+|sa|युद्ध|n}}
 * Scottish Gaelic: {{t|gd|cogadh|m}}, {{t|gd|sabaid|f}}, {{t|gd|còmhrag|f}}
 * Slovak: {{t|sk|boj}}
 * Spanish: {{t+|es|lucha|f}}
