/* Translations */ Added Sanskrit translation of this word. <vomit#59472636>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -123,6 +123,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Romanian: {{t+|ro|vomita}}, {{t+|ro|borî}}, {{t+|ro|vărsa}}, {{t+|ro|voma}}
 * Romansch: {{t|rm|render}}, {{t|rm|vomitar}}, {{t|rm|bittar si}}, {{t|rm|rietscher}}, {{t|rm|scoznar}}
 * Russian: {{t+|ru|блева́ть|impf}}, {{t+|ru|рвать|impf}} {{qualifier|impersonal}}, {{t+|ru|тошни́ть|impf}} {{qualifier|impersonal, to feel sick}}, {{t+|ru|рыга́ть|impf}}
+* Sanskrit: {{t+|sa|वमति}}
 * S'gaw Karen: {{t|ksw|ဘှိး}}
 * Scots: {{t|sco|bowk}}
 * Serbo-Croatian:
