/* Translations */ Added Sanskrit translation of this word. <thunder#59476630>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -357,6 +357,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Romanian: {{t+|ro|tuna}}
 * Romansch: {{t|rm|tunar}}, {{t|rm|tuner}}
 * Russian: {{t+|ru|греме́ть|impf}}, {{t+|ru|грохота́ть|impf}}, {{t+|ru|громыха́ть|impf}}
+* Sanskrit: {{t+|sa|स्तनति}}
 * Sardinian: {{t|sc|tronai}}, {{t|sc|tronare}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|гр̀мети|impf}}
