/* Translations */ Added Sanskrit translation of this word. <cling#59476697>

--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -67,7 +67,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 * Polish: {{t|pl|przylgnąć}}
 * Portuguese: {{t+|pt|agarrar}}
 * Russian: {{t+|ru|льнуть}}, {{t+|ru|прилипа́ть}}, {{t+|ru|цепля́ться}}
-* Sanskrit: {{t+|sa|श्लिष्यति}}
+* Sanskrit: {{t+|sa|श्लिष्यति}}, {{t+|sa|स्निह्यति}}
 * Spanish: {{t+|es|sostener}}, {{t+|es|aferrar|alt=aferrarse}}, {{t+|es|sujetar}}, {{t+|es|agarrar|alt=agarrarse}}
 * Vietnamese: {{t+|vi|bám}}
 {{trans-bottom}}
