--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -300,8 +300,8 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 
 # An act of [[pulling]] (applying force)
 #: {{ux|en|He gave the hair a sharp '''pull''' and it came out.}}
-#* {{rfdatek|en|Jonathan Swift}}
-#*: I awakened with a violent '''pull''' upon the ring which was fastened at the top of my box.
+#* {{RQ:Swift Gulliver|part=I|chapter=1}}
+#*: I found myself suddenly awaked with a violent '''pull''' upon the ring, which was fastened at the top of my box.
 # An [[attractive]] [[force]] which causes [[motion]] towards the source
 #: ''The spaceship came under the '''pull''' of the gas giant.''
 #: ''iron fillings drawn by the '''pull''' of a magnet''
