--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -85,7 +85,7 @@ See the usage notes in the entry {{m|en|blond}}.
 
 # [[blonde]], female with blonde hair
 # [[light]] [[beer]]
-# {{lb|fr|Canada|Louisiana|informal}} [[girlfriend]]
+# {{lb|fr|Canada|Louisiana|Quebec|informal}} [[girlfriend]]
 
 ====Antonyms====
 * {{sense|girlfriend}} {{l|fr|chum}}
