t+uz:[[Fransiya]] t-balance t+tt:[[Франция]] ([[WT:EDIT|Assisted]]) <France#59537029>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -144,9 +144,9 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 * Latvian: {{t|lv|Francija|f}}
 * Limburgish: {{t+|li|Frankriek}}
 * Lithuanian: {{t+|lt|Prancūzija}}
-{{trans-mid}}
 * Livonian: {{t|liv|Prantsūzmō}}
 * Low German: {{t+|nds|Frankriek}}
+{{trans-mid}}
 * Luhya: {{t|luy|Frans}}
 * Luo: {{t|luo|Frans}}
 * Luxembourgish: {{t+|lb|Frankräich|n}}
@@ -213,6 +213,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 * Tagalog: {{t|tl|Pransya}}
 * Tajik: {{t+|tg|Фаронса}}
 * Tamil: {{t|ta|பிரான்ஸ்}}
+* Tatar: {{t+|tt|Франция}}
 * Telugu: {{t+|te|ఫ్రాన్స్}}
 * Thai: {{t+|th|ฝรั่งเศส}}
 * Tibetan: {{t|bo|ཧྥ་རན་སི།}}
@@ -223,6 +224,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 * Ukrainian: {{t+|uk|Фра́нція|f}}
 * Urdu: {{t|ur|فرانس|tr=frāns}}
 * Uyghur: {{t|ug|فرانسىيە|sc=ug-Arab}}
+* Uzbek: {{t+|uz|Fransiya}}
 * Vietnamese: {{t+|vi|Pháp}}, {{t|vi|[[nước]] [[Pháp]]}}
 * Volapük: {{t+|vo|Fransän}}, {{qualifier|obsolete}} {{t|vo|Flent}}, {{qualifier|obsolete}} {{t|vo|Flentän}}
 * Võro: {{t|vro|Prantsusmaa}}
