/* Translations */ <New Zealand#59549062>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -91,7 +91,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * German: {{t+|de|Neuseeland|n}}
 * Greek: {{t+|el|Νέα Ζηλανδία|f}}
 * Gujarati: {{t|gu|ન્યુઝીલેન્ડ|sc=Gujr}}
-* Hawaiian: {{t|haw|Aotearoa}}
+* Hawaiian: {{t|haw|Aotearoa}}, {{t|haw|Nukilani}}
 * Hebrew: {{t|he|נְיוּ זִילַנְד|f|tr=niu ziland}}
 * Hindi: {{t|hi|न्यू ज़ीलंड}}, {{t|hi|न्यूज़ीलैंड}}, {{t+|hi|न्यूज़ीलैण्ड}}
 * Hungarian: {{t+|hu|Új-Zéland}}
