/* Adjective */ not just literature and music -- e.g. scene or characters cut from a video game to save memory <cut#59586954>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -531,7 +531,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 # [[reduce|Reduced]].
 #: {{ux|en|The [[pitcher]] threw a '''cut''' [[fastball]] that was slower than his usual [[pitch]].}}
 #: {{ux|en|'''Cut''' brandy is a liquor made of brandy and hard grain liquor.}}
-# Omitted from a literary or musical work.
+# Omitted from a literary, musical or other work.
 #: {{ux|en|My favourite song had been '''cut''' from the show.}}
 # {{lb|en|of a gem}} [[carve|Carve]]d into a [[shape]]; not [[raw]].
 # {{rfc-sense|en}} {{lb|en|cricket|of a shot}} Played with a [[horizontal]] [[bat]] to hit the ball backward of [[point]].
