--- a/en/偝/偝.11117.wikitext
+++ b/en/偝/偝.11117.wikitext
@@ -41,7 +41,7 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[はい]] (hai), [[ばい]] (bai)|kun=[[すてる]] (suteru), [[そむく]] (somuku)}}
+* {{ja-readings|on=はい,ばい|kun=すてる,そむく}}
 
 ----
 
