/* Translations */ Added Old English translation. <float#59627393>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -97,6 +97,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * Malay: {{t+|ms|terapung}}
 * Maori: {{t|mi|mānu}}, {{t|mi|pōrena}} {{qualifier|as oil on water}}, {{t|mi|kōrewarewa}}
 * Norman: {{t|nrf|fliotter}}
+* Old English: {{t|ang|flēotan}}
 * Portuguese: {{t+|pt|boiar}}, {{t+|pt|flutuar}}
 * Quechua: {{t|qu|tuytuy}}, {{t|qu|wamp'uy}}
 * Romanian: {{t+|ro|pluti}}
