t+id:[[ikon]] ([[WT:EDIT|Assisted]]) <icon#59629935>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -181,6 +181,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * German: {{t+|de|Icon|n}}
 * Greek: {{t+|el|εικονίδιο|n}}
 * Hungarian: {{t+|hu|ikon}}
+* Indonesian: {{t+|id|ikon}}
 * Irish: {{t|ga|íocón|m}}
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t+|ja|アイコン|tr=aikon}}
