t+ee:[[seniit]] ([[WT:EDIT|Assisted]]) <zenith#59636354>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -125,7 +125,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * Chinese:
 *: Mandarin: {{t+|cmn|頂點}}, {{t+|cmn|顶点|tr=dǐngdiǎn}}
 * Czech: {{t+|cs|zenit|m}}
-* Ewe: {{t|ee|seniit}}
+* Ewe: {{t|ee|seniit}}, {{t|ee|seniit}}
 * Finnish: {{t+|fi|huippu}}, {{t+|fi|huipennus}}, {{t|fi|huippukohta}}, {{t+|fi|kohokohta}}
 * French: {{t+|fr|zénith|m}}
 * Georgian: {{t|ka|ზენიტი}}
