/* 2 Chinese */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <假#59652989>

--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -120,10 +120,13 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{lb|zh|literary}} {{n-g|Same as}} {{zh-l|格}}.
+# {{zh-o}} {{n-g|Same as}} {{zh-l|格}}.
 
 ====Compounds====
 {{zh-der|登假}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 {{zh-cat|Elementary|Intermediate}}
 
