/* Derived terms */ <bridge#59665938>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -127,6 +127,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |vertical-lift bridge
 |water under the bridge
 |Weybridge
+|Whaley Bridge
 |Wheatstone bridge
 |Wien bridge
 }}
