/* Definitions */ add usage example <惡#59668306>

--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -49,9 +49,10 @@ From {{inh|zh|sit-pro||*ʔak|bad}}; cognate with {{cog|bo|tr='ag po|t=bad}} ({{z
 ====Definitions====
 {{zh-hanzi}}
 
-# [[evil]]; [[wicked]]; [[bad]]; [[foul]]; [[ill]]
+# [[evil]]; [[wicked]]; [[bad]]; [[foul]]; [[ill]]; [[vicious]]
 #: {{zh-ant|善}}
 #: {{zh-x|惡{è}毒|malicious}}
+#: {{zh-x|惡{è}化|to deteriorate}}
 #* {{zh-x|他 經常 做惡{è}，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
 # {{lb|zh|Cantonese}} [[fierce]]; [[hostile]]
 #: {{zh-x|佢 心情 唔 好 就 好 惡 㗎 喇。|When he's upset, he gets really '''hostile'''.|C}}
