fix /* See also */ added link to [[brick it]] since "bricking it" has been deleted. <brick#59689606>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -424,7 +424,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 
 ===See also===
 * {{l|en|brickfielder}}
-* {{en|brick it}}
+* {{l|en|brick it}}
 
 ===Further reading===
 * {{pedialite}}
