t+pdc:[[kumme]] t-balance ([[WT:EDIT|Assisted]]) <come#59700585>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -256,9 +256,9 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Lithuanian: {{t+|lt|ateiti}}
 * Lushootseed: {{t|lut|ʔəƛ̕}}
 * Lü: {{t|khb|ᦙᦱ}}
-{{trans-mid}}
 * Macedonian: {{t|mk|доаѓа|impf}}, {{t|mk|дојде|pf}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
+{{trans-mid}}
 * Maltese: {{t|mt|ġie}}
 * Manchu: {{t|mnc||tr=jimbi|sc=Mong}}
 * Manx: {{t|gv|tar}}
@@ -280,6 +280,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Ossetian: {{t-needed|os}}
 * Ottoman Turkish: {{t|ota|گلمك|tr=gelmek}}
 * Pashto: {{t+|ps|راتلل|tr=rātlᶕl|sc=ps-Arab}}
+* Pennsylvania German: {{t|pdc|kumme}}
 * Persian: {{t+|fa|آمدن|tr=âmadan}}
 * Phoenician: {{t|phn|𐤁𐤀}}
 * Pipil: {{t|ppl|witz}}, {{t|ppl|huitz}}
