--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -525,7 +525,8 @@ Borrowed from {{bor|ro|he|ישראל}}.
 
 ====Related terms====
 * {{l|es|israelita}}
-
+===Anagrams===
+* {{anagrams|es|liarse|raíles}}
 [[Category:es:Countries in Asia]]
 
 ----
