t+hi:[[घुमाव]] ([[WT:EDIT|Assisted]]) <curve#59706467>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -58,7 +58,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Greek: {{t+|el|καμπύλη|f}}
 *: Ancient: {{t|grc|καμπή|f}}
 * Hebrew: {{t|he|עקימה|f|tr='aqima}}
-* Hindi: {{t+|hi|चक्कर|m}}
+* Hindi: {{t+|hi|चक्कर|m}}, {{t+|hi|घुमाव|m}}
 * Ido: {{t+|io|kurvo}}
 * Indonesian: {{t+|id|lengkungan}}
 * Italian: {{t+|it|curva|f}}
@@ -161,6 +161,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * French: {{t+|fr|courbes}}
 * Greek: {{t+|el|καμπύλη|f}}, {{t|el|καμπύλες|f-p}}
 * Hebrew: {{t|he|חיטובים|m-p|tr=khit'uvym}}
+* Hindi: {{t+|hi|घुमाव|m}}
 * Italian: {{qualifier|usually plural}} {{t+|it|curva|f}}
 {{trans-mid}}
 * Macedonian: {{t|mk|о́блина|f}}, {{t|mk|о́блини|f-p}}
