t+kw:[[ikon]] ([[WT:EDIT|Assisted]]) <icon#59708902>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -45,6 +45,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Armenian: {{t+|hy|պատկեր}}
 * Bulgarian: {{t+|bg|изображение|n}}
 * Catalan: {{t+|ca|icona|f}}
+* Cornish: {{t|kw|ikon|m}}
 * Danish: {{t|da|ikon|c}}
 * Dutch: {{t+|nl|icoon|f}}
 * Esperanto: {{t|eo|piktogramo}}
