/* Noun */ link the 'two noble kinsmen' quote to the correct page. <cut#59721958>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -710,8 +710,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 # An engraved block or plate; the impression from such an engraving.
 #: {{ux|en|a book illustrated with fine '''cuts'''}}
 # {{lb|en|obsolete}} A common [[workhorse]]; a [[gelding]].
-#* {{RQ:BFCT|The Two Noble Kinsmen|3|4}}
-#*: He's buy me a '''cut''', forth for to ride.
+#* {{RQ:Beaumont Fletcher Comedies and Tragedies|The Two Noble Kinsmen|3|4|folio=2nd|part=2|436|column=2|He's buy me a whit '''Cut''', forth for to ride}}
 # {{lb|en|slang|dated}} The failure of a [[college]] [[officer]] or [[student]] to be present at any appointed exercise.
 # A [[skein]] of [[yarn]].
 #: {{rfquotek|en|Wright}}
