t+sk:[[gróf]] ([[WT:EDIT|Assisted]]) <count#59787448>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -396,6 +396,7 @@ Borrowed from {{bor|en|xno|conte}} and {{bor|en|fro|comte||count}}, from {{der|e
 * Serbo-Croatian: 
 *: Cyrillic: {{t|sh|гроф|m}}
 *: Roman: {{t+|sh|grof|m}}
+* Slovak: {{t+|sk|gróf|m}}
 * Slovene: {{t+|sl|grof|m}}
 * Spanish: {{t+|es|conde|m}}
 * Swedish: {{t+|sv|greve}}
