t+fr:[[reptation]] ([[WT:EDIT|Assisted]]) <creep#59805658>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -235,6 +235,7 @@ From the above verb.
 {{trans-top|geology: imperceptible downslope movement of surface}}
 * Bulgarian: {{t+|bg|свличане}}
 {{trans-mid}}
+* French: {{t+|fr|reptation|f}}
 * Italian: {{t|it|scollamento}}
 {{trans-bottom}}
 
