/* 2.3.1 Definitions */ edited using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]] <值#59821801>

--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -75,6 +75,9 @@ Taiwan: ti̍t - literary; ta̍t - vernacular
 
 # {{†}} to [[hold]] [[upright]]
 
+===References===
+* {{R:yue:Hanzi}}
+
 {{zh-cat|Intermediate}}
 
 ----
