--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -88,7 +88,7 @@ See the usage notes in the entry {{m|en|blond}}.
 # {{lb|fr|Canada|Quebec|Louisiana|informal}} [[girlfriend]]
 
 ====Antonyms====
-* {{sense|girlfriend}} {{l|fr|chum}}
+* {{sense|boyfriend}} {{l|fr|chum}}
 
 ====Related terms====
 * {{l|fr|bière blonde}}
